更换名称为update_app

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: app_update
+name: update_app
 description: "A new Flutter plugin for app upgrade"
 version: 1.0.0
 homepage: https://github.com/LiuPack
